# ghost_rabbit_ai

./: Cargo.toml  LICENSE  README.md
docs/: index.html  quad_storage.js
gui/: Cargo.toml  build.sh  index.html  run_test.sh
gui/pkg/: mq_js_bundle.js
gui/src/: game_screen.rs  learn_ai.rs  main.rs  main_menu.rs  options.rs  rand_gen.rs  records_menu.rs  recrord_table.rs  resources.rs  square_screen.rs
gui/src/menus/: about.rs  controls.rs  htp.rs  main.rs  mod.rs  options.rs  records.rs
legacy/project/: firstproject.sln
legacy/project/firstproject/firstproject/: About.cs  Game1.cs  Menu.cs  Options.cs  Program.cs  Records.cs  Sound.cs  Sprite.cs  firstproject.csproj  firstproject.csproj.Release.cachefile
legacy/project/firstproject/firstproject/Properties/: AssemblyInfo.cs
legacy/project/firstproject/firstprojectContent/: firstprojectContent.contentproj
legacy/project/firstproject/firstprojectContent/Sound/: Sound.xap
legacy/project/firstproject/firstprojectContent/Text/: option.txt  records.txt
libs/game_logic/: Cargo.toml
libs/game_logic/src/: collide.rs  floor.rs  lib.rs  monster.rs  player.rs  primitives.rs
libs/genetic_algorithm/: Cargo.toml
libs/genetic_algorithm/src/: chromosome.rs  crossover.rs  lib.rs  mutation.rs  selection.rs
libs/neural_network/: Cargo.toml
libs/neural_network/src/: layer.rs  lib.rs  neuron.rs
libs/rand_trait/: Cargo.toml
libs/rand_trait/src/: lib.rs
