[package]
name = "ghost_rabbit_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.8"
rand_trait = { path = "../libs/rand_trait" }
neural_network = { path = "../libs/neural_network" }
genetic_algorithm = { path = "../libs/genetic_algorithm" }
game_logic = { path = "../libs/game_logic" }

[dev-dependencies]
rand = "0.8.5"
genetic_algorithm = { path = "../libs/genetic_algorithm", features = ["testing"] }